@@ -9,15 +9,35 @@ import org.springframework.shell.standard.*;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import jakarta.annotation.PreDestroy;
 
 @ShellComponent
 public class VacancyCommands {
     private final VacancyService vacancyService;
+    private ScheduledExecutorService scheduler;
 
     @Autowired
     public VacancyCommands(
             VacancyService vacancyService) {
         this.vacancyService = vacancyService;
+    }
+
+    @PreDestroy
+    public void cleanup() {
+        stopNotifications();
+    }
+
+    public void stopNotifications() {
+        if (scheduler != null && !scheduler.isShutdown()) {
+            scheduler.shutdown();
+            try {
+                if (!scheduler.awaitTermination(800, TimeUnit.MILLISECONDS)) {
+                    scheduler.shutdownNow();
+                }
+            } catch (InterruptedException e) {
+                scheduler.shutdownNow();
+            }
+        }
     }
 
     @ShellMethod(key = "find-by-id", value = "Find Vacancy by id")
@@ -135,37 +155,34 @@ public class VacancyCommands {
 
     @ShellMethod(value = "Will send notification if a vacancy appears", key = "set-criteria")
     public String sendNotification(
-            @ShellOption(value = {"-t", "--title"}, help = "Job title",
-                    defaultValue = ShellOption.NULL) String title,
-            @ShellOption(value = {"-c", "--company"}, help = "Company name",
-                    defaultValue = ShellOption.NULL) String company,
-            @ShellOption(value = {"-min", "--min-salary"}, help = "Minimum salary",
-                    defaultValue = ShellOption.NULL) Integer minSalary,
-            @ShellOption(value = {"-max", "--max-salary"}, help = "Maximum salary",
-                    defaultValue = ShellOption.NULL) Integer maxSalary,
-            @ShellOption(value = {"-a", "--area"}, help = "Area of vacancy",
-                    defaultValue = ShellOption.NULL) String area) {
+            @ShellOption(value = {"-t", "--title"}, help = "Job title", defaultValue = ShellOption.NULL) String title,
+            @ShellOption(value = {"-c", "--company"}, help = "Company name", defaultValue = ShellOption.NULL) String company,
+            @ShellOption(value = {"-min", "--min-salary"}, help = "Minimum salary", defaultValue = ShellOption.NULL) Integer minSalary,
+            @ShellOption(value = {"-max", "--max-salary"}, help = "Maximum salary", defaultValue = ShellOption.NULL) Integer maxSalary,
+            @ShellOption(value = {"-a", "--area"}, help = "Area of vacancy", defaultValue = ShellOption.NULL) String area) {
+
+        stopNotifications();
 
         int size = 5;
-        Page<VacancyEntity> initialPage = vacancyService.getVacancies(title, company,
-                minSalary, maxSalary, area, 0, size);
+        Page<VacancyEntity> initialPage = vacancyService.getVacancies(title, company, minSalary, maxSalary, area, 0, size);
         String output = vacancyService.formatResult(initialPage);
         System.out.println("Эти вакансии уже есть в базе:\n" + output);
 
-        ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
+        scheduler = Executors.newSingleThreadScheduledExecutor(runnable -> {
+            Thread thread = new Thread(runnable);
+            thread.setDaemon(true);
+            return thread;
+        });
         scheduler.scheduleAtFixedRate(() -> {
             try {
-                Page<VacancyEntity> currentPage = vacancyService.getVacancies(title, company,
-                        minSalary, maxSalary, area, 0, size + 1);
+                Page<VacancyEntity> currentPage = vacancyService.getVacancies(title, company, minSalary, maxSalary, area, 0, size + 1);
                 if (currentPage.getContent().size() > initialPage.getContent().size()) {
                     System.out.println("Новая вакансия найдена!");
                     System.out.println(vacancyService.formatVacancy(
-                            currentPage.getContent().getLast()));
+                            currentPage.getContent().get(currentPage.getContent().size() - 1)));
                 }
             } catch (Exception e) {
                 e.printStackTrace();
-            } finally {
-                scheduler.shutdown();
             }
         }, 0, 30, TimeUnit.SECONDS);
 
